--- a/css/elements.page.css
+++ b/css/elements.page.css
@@ -5,7 +5,15 @@
 */
 
 html {
-
+    font-size: 16px;
+    line-height: 1.5;
+    font-family: "Helvetica Neue", Helvetica, arial, sans-serif;
+    color: #111;
+    padding: 24px 24px 0;
+}
+body{
+    max-width: 42em;
+    margin: 0 auto;
 }
 
 /*
@@ -16,9 +24,11 @@ html {
  */
 
 ::-moz-selection {
-
+    background: #44c8f5;
+    color: white;
 }
 
 ::selection {
-
+    background: #44c8f5;
+    color: white;
 }
