--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,48 @@
 body {
     background: khaki;
 }
+
+/*
+    Elements: Page
+    ---
+    Default markup for page level elements
+*/
+
+html {
+    font-size: 16px;
+    line-height: 1.5;
+    font-family: "Helvetica Neue", Helvetica, arial, sans-serif;
+    color: #111;
+    padding: 24px 24px 0;
+}
+body{
+    max-width: 42em;
+    margin: 0 auto;
+}
+
+/*
+ * Remove text-shadow in selection highlight:
+ * https://twitter.com/miketaylr/status/12228805301
+ *
+ * Customize the background color to match your design.
+ */
+
+::-moz-selection {
+    background: #44c8f5;
+    color: white;
+}
+
+::selection {
+    background: #44c8f5;
+    color: white;
+}
+/*
+    Elements: Images
+    ---
+    Default markup for images to make them responsive
+*/
+
+img {
+    max-width: 100%;
+    vertical-align: top;
+}
