--- a/css/screen.css
+++ b/css/screen.css
@@ -127,15 +127,16 @@ hr {
 }
 
 a {
-
+    color: royalblue;
+    transition: all .1s ease-in-out;
 }
 
 a:hover,
 a:focus {
-
+    color: crimson;
 }
 
 a:visited,
 a:active {
-    
+    color: blueviolet;
 }
