--- a/css/screen.css
+++ b/css/screen.css
@@ -1,7 +1,3 @@
-body {
-    background: khaki;
-}
-
 /*
     Elements: Page
     ---
@@ -14,6 +10,7 @@ html {
     font-family: "Helvetica Neue", Helvetica, arial, sans-serif;
     color: #111;
     padding: 24px 24px 0;
+    scroll-behavior: smooth;
 }
 body{
     max-width: 42em;
@@ -139,6 +136,24 @@ a:focus {
 a:visited,
 a:active {
     color: blueviolet;
+}
+
+table {
+    width: 100%;
+    border-spacing: 0;
+}
+
+th {
+    text-align: left;
+}
+
+th,
+td {
+    padding: 4px 8px;
+    border-bottom: 1px solid gainsboro;
+}
+.odd {
+    background-color: whitesmoke;
 }
 /*
     Media Queries
